# SimpleAIAgentServer

./: .gitignore  README.md  pyproject.toml
client/: chat_client.py  utils.py
config/: model_config.json
server/: agent_server.py  config.py
src/: simple_agent.py
